# supergfxctl

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  flake.nix
data/: supergfxd.service
src/: actions.rs  cli.rs  config.rs  config_old.rs  controller.rs  daemon.rs  error.rs  gfx_devices.rs  gfx_vendors.rs  lib.rs  pci_device.rs  special.rs  special_asus.rs  zbus_iface.rs  zbus_proxy.rs
src/tests/: actions.rs
