[package]
name = "supergfxctl"
version = "5.0.2"
license = "MPL-2.0"
readme = "README.md"
authors = ["Luke <luke@ljones.dev>"]
repository = "https://gitlab.com/asus-linux/asusctl"
homepage = "https://gitlab.com/asus-linux/asusctl"
documentation = "https://docs.rs/rog-anime"
description = "Types useful for fancy keyboards on ASUS ROG laptops"
keywords = ["graphics", "nvidia", "switching"]
edition = "2021"
rust-version = "1.64"
exclude = ["data"]

[features]
default = ["daemon", "cli"]
daemon = ["env_logger"]
cli = ["gumdrop"]

[lib]
name = "supergfxctl"
path = "src/lib.rs"

[[bin]]
name = "supergfxd"
path = "src/daemon.rs"
required-features = ["daemon"]

[[bin]]
name = "supergfxctl"
path = "src/cli.rs"
required-features = ["cli"]

[dependencies]
udev = "^0.6"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
log = "^0.4"

zbus = { version = "^3.2", features = ["tokio"]}
zvariant = "^3.2"
zvariant_derive = "^3.2"
logind-zbus = { version = "^3.0" }
tokio = { version = "^1.21.2", features = ["macros", "rt-multi-thread", "time"]}

env_logger = { version = "^0.9", optional = true }
gumdrop = { version = "^0.8", optional = true }

[profile.release]
lto = true
debug = false
opt-level = 3
panic = "abort"

[profile.dev]
debug = false
opt-level = 1

[profile.bench]
debug = false
opt-level = 3
